# fastcert

./: AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: coverage.yml  release.yml
homebrew/: fastcert.rb
scripts/: update-homebrew.sh
src/: ca.rs  cert.rs  error.rs  fileutil.rs  lib.rs  main.rs
src/truststore/: java.rs  linux.rs  macos.rs  mod.rs  nss.rs  windows.rs
tests/: ca_tests.rs  e2e.rs  library_api.rs
