[package]
name = "rscert"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
rcgen = { version = "0.12", features = ["x509-parser"] }
ring = "0.17"
pem = "3.0"
p12 = "0.6"
dirs = "5.0"
time = { version = "0.3", features = ["formatting", "macros"] }
hostname = "0.3"
regex = "1.10"
glob = "0.3"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
x509-parser = "0.16"
idna = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Security_Cryptography"] }

[dev-dependencies]
tempfile = "3.8"
